fixed reply button on mobile.

--- a/static/css/simple-plus.css
+++ b/static/css/simple-plus.css
@@ -57,7 +57,7 @@ nav a.current {
 
 .replyButton {
   display: inline-block;
-  width: 100%;
+  width: -webkit-fill-available;
   text-align: center;
   margin-top: 3rem;
 }
